[gd_scene load_steps=7 format=3 uid="uid://bd3hq4pcxtju6"]

[ext_resource type="Script" path="res://GUI/lvup.gd" id="1_ikrxj"]
[ext_resource type="Texture2D" uid="uid://fair60qiipvy" path="res://asset/bgim/Mountain_4.png" id="2_u5r7h"]
[ext_resource type="Texture2D" uid="uid://c55gwqiw6jkuu" path="res://items/asset/bounty.png" id="3_gxjjt"]
[ext_resource type="PackedScene" uid="uid://ld6bdl0q1lvi" path="res://GUI/audio_button.tscn" id="4_3yk13"]
[ext_resource type="Texture2D" uid="uid://b5xdvblb2r3wh" path="res://asset/attr/hp_recovery.png" id="4_8vm20"]
[ext_resource type="PackedScene" uid="uid://f0tj3vq8x8bb" path="res://GUI/attr_panel.tscn" id="5_w141y"]

[node name="lvup" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ikrxj")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u5r7h")
expand_mode = 1

[node name="UpgradeLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "K_UPGRADE"

[node name="RefreshButton" parent="." instance=ExtResource("4_3yk13")]
offset_left = 200.0
offset_top = 294.0
offset_right = 304.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 12
text = "K_REFRESH"

[node name="TextureRect" type="TextureRect" parent="RefreshButton"]
layout_mode = 0
offset_left = 104.0
offset_top = 3.0
offset_right = 124.0
offset_bottom = 23.0
texture = ExtResource("3_gxjjt")
expand_mode = 2

[node name="ItemsGrid" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -105.0
offset_right = 167.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 10
columns = 4

[node name="ItemPanel" type="Panel" parent="ItemsGrid"]
visible = false
custom_minimum_size = Vector2(110, 90)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ItemsGrid/ItemPanel"]
layout_mode = 1
offset_right = 110.0
offset_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="ItemsGrid/ItemPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="ItemsGrid/ItemPanel/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(36, 0)
layout_mode = 2

[node name="ItemTextureRect" type="TextureRect" parent="ItemsGrid/ItemPanel/MarginContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 1
offset_right = 36.0
offset_bottom = 36.0
texture = ExtResource("4_8vm20")
expand_mode = 2

[node name="ItemDescrip" type="VBoxContainer" parent="ItemsGrid/ItemPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="ItemName" type="Label" parent="ItemsGrid/ItemPanel/MarginContainer/HBoxContainer/ItemDescrip"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemText" type="Label" parent="ItemsGrid/ItemPanel/MarginContainer/HBoxContainer/ItemDescrip"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 6
vertical_alignment = 1
autowrap_mode = 3

[node name="ItemAttrText" type="RichTextLabel" parent="ItemsGrid/ItemPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 8.0
offset_right = 49.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true

[node name="ItemButton" parent="ItemsGrid/ItemPanel" instance=ExtResource("4_3yk13")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -22.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "K_CHOOSE"

[node name="AttrPanel" parent="." instance=ExtResource("5_w141y")]

[node name="BountyBox" type="HBoxContainer" parent="."]
offset_left = 512.0
offset_top = 8.0
offset_right = 589.0
offset_bottom = 24.0

[node name="Bounty" type="Label" parent="BountyBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0.470588, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0.823529, 0.235294, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 10
text = "K_BOUNTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BountyCount" type="Label" parent="BountyBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.823529, 0.235294, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.470588, 0.509804, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BountyBox"]
layout_mode = 2
texture = ExtResource("3_gxjjt")
expand_mode = 2

[connection signal="pressed" from="RefreshButton" to="." method="_on_refresh_button_pressed"]
